added the functionality for Edit button, where user can edit name of the train, Destination and Frequency.

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 			  	<th scope="col">Train Schedule</th>
 			  	</tr>
 			    <tr>
-			      <th scope="col" >#</th>
-			      <th scope="col" >Train Name</th>
-			      <th scope="col" >Destination</th>
-			      <th scope="col" >Frequency(min)</th>
-			      <th scope="col" >Next Arrival</th>
+			      <th scope="col" id="editButton" >#</th>
+			      <th scope="col" id="editName" >Train Name</th>
+			      <th scope="col" id="editDestination" >Destination</th>
+			      <th scope="col" id="editFreq">Frequency(min)</th>
+			      <th scope="col" id="editArrival">Next Arrival</th>
 			      <th scope="col">Minutes Away</th>
 			    </tr>
 			  </thead>
