--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
 <container>
 	<div class="row justify-content-md-center">
 		<div class="col-8">
+			<div class="alert alert-danger" role="alert" id="alert1">
+ 			<strong>Oh snap!</strong> Change a few things up and try submitting again.
+			</div>
 			<table class="table table-hover">
 			  <thead class="thead-dark">
 			  	<tr class="table">
-			  	<th scope="col">Train Schedule</th>
+			  	<th>Train Schedule</th>
 			  	</tr>
 			    <tr>
 			      <th scope="col" id="editButton" >#</th>
@@ -91,6 +94,9 @@
 			    <label for="frequency">Frequency(min)</label>
 			    <input type="frequency" class="form-control" id="frequency" aria-describedby="frequencyHelp" placeholder="Frequency">
 			  </div>
+				<div class="alert alert-danger" role="alert"  id="alert2">
+ 					<strong>Oh snap!</strong> Change a few things up and try submitting again.
+				</div>
 			  <button type="submit" class="btn btn-primary" id="addTrain">Submit</button>
 			</form>
 		</div>
